--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#about">About Me</a>
                     <a class="nav-link" href="#services">Services</a>
                     <a class="nav-link" href="#portofolio">Portofolio</a>
-                    <a class="nav-link" href="blog.html">Blog</a
+                    <a class="nav-link" href="https://drive.google.com/file/d/1gqRvHTgZP9kGafUlnYDEvEtwRrBrR-6M/view?usp=sharing" target="_blank">Download CV</a
             >
           </div>
         </div>
@@ -60,10 +60,10 @@
           </div>
           <div class="col mt-3">
             <a
-              href="https://drive.google.com/file/d/1gqRvHTgZP9kGafUlnYDEvEtwRrBrR-6M/view?usp=sharing"
+              href=""
               class="btn btn-hire"
-              target="_blank"
-              >Download CV</a
+              
+              >Hire Me</a
             >
           </div>
         </div>
@@ -305,9 +305,9 @@
                             <div class="col-12 col-lg-3">
                                 <h5>ABOUT ME</h5>
                                 <ul class="list-unstyled">
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a href="#">Education</a></li>
-                                    <li><a href="#">Skill</a></li>
+                                    <li><a href="about-profile.html">Profile</a></li>
+                                    <li><a href="about-profile.html">Education</a></li>
+                                    <li><a href="about-profile.html">Skill</a></li>
                                     <li><a href="#">Portofolio</a></li>
                                 </ul>
                             </div>
