--- a/about-profile.html
+++ b/about-profile.html
@@ -26,7 +26,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="/images/logo.png" class="img-fluid" alt="" />
             </a>
         </div>
