update file index

--- a/index.html
+++ b/index.html
@@ -38,32 +38,27 @@
                     <a class="nav-link" href="#about">About Me</a>
                     <a class="nav-link" href="#services">Services</a>
                     <a class="nav-link" href="#portofolio">Portofolio</a>
-                    <a class="nav-link" href="https://drive.google.com/file/d/1gqRvHTgZP9kGafUlnYDEvEtwRrBrR-6M/view?usp=sharing" target="_blank">Download CV</a
-            >
-          </div>
+                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
     <!-- End Navbar -->
 
     <!-- Header -->
     <section class="section-content-header mt-5 text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <img src="images/Hero/wiku_profile.png" alt="Profile" />
-          </div>
-          <div class="col-lg-12 mt-3">
-            <h5>Hi, Everyone</h5>
-            <h1>I am Wiku Karno</h1>
-            <p>Junior <span class="typed text-primary" data-typed-items="Ui Designer, Developer, Content Writter"></span></p>
-          </div>
-          <div class="col mt-3">
-            <a
-              href=""
-              class="btn btn-hire"
-              
-              >Hire Me</a
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img src="images/Hero/wiku_profile.png" alt="Profile" />
+                </div>
+                <div class="col-lg-12 mt-3">
+                    <h5>Hi, Everyone</h5>
+                    <h1>I am Wiku Karno</h1>
+                    <p>Junior <span class="typed text-primary" data-typed-items="Ui Designer, Developer, Content Writter"></span></p>
+                </div>
+                <div class="col mt-3">
+                    <a href="" class="btn btn-hire">Hire Me</a
             >
           </div>
         </div>
@@ -287,116 +282,162 @@
                 </div>
             </div>
         </div>
-        </section>
-        <!-- End Portofolio -->
+    </section>
+    <!-- End Portofolio -->
 
-        <section class="section-footer">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="row mt-5">
-                            <div class="col-12 col-lg-3">
-                                <img src="/images/logo_footer.png" class="img-fluid" alt="">
-                                <h5 class="name-site mt-3">WIKUKARNO.ID</h5>
-                                <P class="description">
-                                    Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
-                                </P>
-                            </div>
-                            <div class="col-12 col-lg-3">
-                                <h5>ABOUT ME</h5>
-                                <ul class="list-unstyled">
-                                    <li><a href="about-profile.html">Profile</a></li>
-                                    <li><a href="about-profile.html">Education</a></li>
-                                    <li><a href="about-profile.html">Skill</a></li>
-                                    <li><a href="#">Portofolio</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-12 col-lg-3">
-                                <h5>USEFUL LINK</h5>
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Term of Services</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-12 col-lg-3">
-                                <h5>SOCIAL MEDIA</h5>
-                                <p class="description">
-                                    If you are interested in my work, please send a message to cooperate. You can also browse my social media below to see the best works and content from me.
-                                </p>
-                                <ul class="list-unstyled">
-                                    <li><a href="#">+62 878 - 3124 - 7352</a></li>
-                                    <li><a href="#">me@wikukarno.id</a></li>
-                                </ul>
-                                <div class="row social-media">
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/youtube.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/instagram.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/linkedin.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/github.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/dribbble.png" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-2 col-lg-2">
-                                        <a href="#">
-                                            <img src="/images/social/behance.png" alt="">
-                                        </a>
-                                    </div>
+    <section class="section-footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="row mt-5">
+                        <div class="col-12 col-lg-3">
+                            <img src="/images/logo_footer.png" class="img-fluid" alt="">
+                            <h5 class="name-site mt-3">WIKUKARNO.ID</h5>
+                            <P class="description">
+                                Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
+                            </P>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>ABOUT ME</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="about-profile.html">Profile</a></li>
+                                <li><a href="about-profile.html">Education</a></li>
+                                <li><a href="about-profile.html">Skill</a></li>
+                                <li><a href="#">Portofolio</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>USEFUL LINK</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Term of Services</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>SOCIAL MEDIA</h5>
+                            <p class="description">
+                                If you are interested in my work, please send a message to cooperate. You can also browse my social media below to see the best works and content from me.
+                            </p>
+                            <ul class="list-unstyled">
+                                <li><a href="#">+62 878 - 3124 - 7352</a></li>
+                                <li><a href="#">me@wikukarno.id</a></li>
+                            </ul>
+                            <div class="row social-media">
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/youtube.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/instagram.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/linkedin.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/github.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/dribbble.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-2 col-lg-2">
+                                    <a href="#">
+                                        <img src="/images/social/behance.png" alt="">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center text-center pt-5 pb-3">
-                    <div class="col-12 f-description font-weight-light">
-                        <script>
-                            document.write(new Date().getFullYear())
-                        </script>
-                        Copyright <a href="#" class="name-site">wikukarno.id</a> • All rights reserved • Made in Riau
+            </div>
+            <div class="row justify-content-center align-items-center text-center pt-5 pb-3">
+                <div class="col-12 f-description font-weight-light">
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    Copyright <a href="#" class="name-site">wikukarno.id</a> • All rights reserved • Made in Riau
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="section-contact">
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Send Message Us</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="#">
+                            <div class="row g-3 mb-3">
+                                <div class="col-12 col-lg-6">
+                                    <label for="name">Username</label>
+                                    <input type="text" class="form-control" name="name">
+                                </div>
+                                <div class="col-12 col-lg-6">
+                                    <label for="email">Email Address</label>
+                                    <input type="email" class="form-control" name="email">
+                                </div>
+                            </div>
+                            <div class="row g-3 mb-3">
+                                <div class="col">
+                                    <label for="name">Subject</label>
+                                    <input type="text" class="form-control" name="subject">
+                                </div>
+                            </div>
+                            <div class="row g-3 mb-3">
+                                <div class="col">
+                                    <label for="name">Message</label>
+                                    <textarea class="form-control h-100" id="message-text"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer mt-5">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <!-- End Contact -->
 
 
 
 
 
-        <!-- back to top -->
-        <a href="# " class="to-top ">
-            <i class="fas fa-chevron-up "></i>
-        </a>
-        <!-- back to top -->
+    <!-- back to top -->
+    <a href="# " class="to-top ">
+        <i class="fas fa-chevron-up "></i>
+    </a>
+    <!-- back to top -->
 
-        <!-- Script -->
-        <script src="/libraries/jquery/jquery-3.6.0.js"></script>
-        <script src="/libraries/bootstrap/js/bootstrap.js"></script>
-        <script src="libraries/lightbox/js/lightbox-plus-jquery.js"></script>
-        <script src="/libraries/aos/aos.js"></script>
-        <script src="/libraries/typed/typed.min.js"></script>
-        <script src="/script/main.js"></script>
-        <script>
-            AOS.init();
-        </script>
-        <!-- End Script -->
+    <!-- Script -->
+    <script src="/libraries/jquery/jquery-3.6.0.js"></script>
+    <script src="/libraries/bootstrap/js/bootstrap.js"></script>
+    <script src="libraries/lightbox/js/lightbox-plus-jquery.js"></script>
+    <script src="/libraries/aos/aos.js"></script>
+    <script src="/libraries/typed/typed.min.js"></script>
+    <script src="/script/main.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!-- End Script -->
 </body>
 
 </html>
